# software-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt
include/: array2d.h  canvas.h  helpers.h  intdefines.h  options.h  ray.h  sphere.h  vec.h  vec_utils.h
src/: canvas.cpp  main.cpp  ray.cpp  sphere.cpp
